--- a/adder/CMakeLists.txt
+++ b/adder/CMakeLists.txt
@@ -1,3 +1,6 @@
 cmake_minimum_required(VERSION 3.11)
 project(mearlymath)
 add_library(mearlymath adder.cpp)
+
+install(TARGETS mearlymath DESTINATION lib)
+install(FILES adder.h DESTINATION include)
