--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,24 @@
 cmake_minimum_required(VERSION 3.22.1)
 
-project(MyProject)
+project(MyProject VERSION 1.0)
+
+configure_file(MyProjectConfig.h.in MyProjectConfig.h)
 
 add_executable(${PROJECT_NAME} main.cpp)
-add_subdirectory(external/glfw)
-add_subdirectory(adder)
+
+target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR})
+
+option(USE_ADDER "A simple library for adding 2 floats." ON)
+
+if(USE_ADDER)
+    add_subdirectory(adder)
+
+    list(APPEND EXTRA_LIB_DIRS mearlymath)
+    list(APPEND EXTRA_INCLUDE_DIRS adder)
+    list(APPEND EXTRA_LINKS mearlymath)
+endif()
 
 find_package(Git QUIET)
-
 if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
     option(GIT_SUBMODULE "Check submodules during build" ON)
     if(GIT_SUBMODULE)
@@ -25,11 +36,22 @@ if(NOT EXISTS "${PROJECT_SOURCE_DIR}/external/glfw/CMakeLists.txt")
     message(FATAL_ERROR "The glfw submoduels was not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules")
 endif()
 
+add_subdirectory(external/glfw)
 
-target_include_directories(${PROJECT_NAME} PUBLIC adder/
-                                           PUBLIC external/glfw/include)
+target_include_directories(${PROJECT_NAME} PUBLIC external/glfw/include
+                                           ${EXTRA_INCLUDE_DIRS})
 
-target_link_directories(${PROJECT_NAME} PRIVATE adder/build/
-                                        PRIVATE build/external/glfw/src)
+target_link_directories(${PROJECT_NAME} PRIVATE build/external/glfw/src
+                                        ${EXTRA_LIB_DIRS})
 
-target_link_libraries(${PROJECT_NAME} mearlymath glfw)
+target_link_libraries(${PROJECT_NAME} glfw
+                                      ${EXTRA_LINKS})
+
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+install(FILES "${PROJECT_BINARY_DIR}/MyProjectConfig.h" DESTINATION include)
+
+include(InstallRequiredSystemLibraries)
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/license.txt")
+set(CPACK_PACKAGE_VERSION_MAJOR "${Tutorial_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${Tutorial_VERSION_MINOR}")
+include(CPack)
